# imgdelta

./: .env.example  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  architecture.html  benchmarks.html  cli-reference.html  configuration.html  index.html  integration.html  introduction.html  lefthook.yml  print.html  quickstart.html  responsibility.html  rust-toolchain.toml  searcher-c2a407aa.js  searchindex-565f80e4.js  searchindex-d37a4208.js  searchindex-e746d648.js  searchindex-f6a020ce.js  toc-9258d3bf.js  toc.html
api/: crates.js  help.html  settings.html  src-files.js
book/: book.toml
cli/: Cargo.toml
cli/migrations/: 0002_create_blob_origins.sql
cli/src/: config.rs  main.rs
cli/src/commands/: compress.rs  decompress.rs  image.rs  manifest.rs
cli/src/commands/debug/: mod.rs  walkdir_cmd.rs
cli/src/impls/: local_storage.rs  s3_storage.rs
core/: Cargo.toml
core/src/: algorithm.rs  compress_pipeline.rs  compressor.rs  decompress_pipeline.rs  encoder.rs  image.rs  lib.rs  manifest.rs  partition.rs  routing.rs  scheduler.rs  storage.rs
core/src/compress/: context.rs  draft.rs  mod.rs  partition.rs  pipeline.rs  stage.rs
core/src/compress/partitions/: bios_boot.rs  mbr.rs  mod.rs  raw_partition.rs
core/src/compress/partitions/fs/: context.rs  draft.rs  mod.rs  pipeline.rs  stage.rs
core/src/compress/partitions/fs/stages/: blob_lookup.rs  cleanup.rs  compute_patches.rs  download_blobs.rs  match_renamed.rs  mod.rs  pack_archive.rs  s3_lookup.rs  upload_blobs.rs  walkdir.rs
core/src/compress/stages/: cleanup.rs  compute_patches.rs  download_blobs.rs  match_renamed.rs  mod.rs  pack_archive.rs  s3_lookup.rs  upload_blobs.rs  walkdir.rs
core/src/decompress/: context.rs  draft.rs  mod.rs  pipeline.rs  stage.rs
core/src/decompress/partitions/: bios_boot.rs  mbr.rs  mod.rs  raw_partition.rs
core/src/decompress/partitions/fs/: context.rs  draft.rs  mod.rs  pipeline.rs  stage.rs
core/src/decompress/partitions/fs/stages/: add_records.rs  apply_records.rs  change_records.rs  copy_unchanged.rs  delete_records.rs  download_blobs.rs  extract_archive.rs  mod.rs  rename_records.rs
core/src/decompress/stages/: apply_records.rs  copy_unchanged.rs  extract_archive.rs  mod.rs
core/src/encoders/: mod.rs
core/src/encoders/passthrough/: mod.rs
core/src/encoders/vcdiff/: mod.rs
core/src/encoding/: mod.rs  passthrough.rs  router.rs  text_diff.rs
core/src/encoding/encoders/: mod.rs  passthrough.rs  text_diff.rs
core/src/encoding/encoders/xdelta3/: mod.rs
core/src/encoding/xdelta3/: mod.rs
core/src/formats/: directory.rs  qcow2.rs
core/src/fs_diff/: mod.rs
core/src/image/: directory.rs  mod.rs  qcow2.rs
core/src/operations/: compress.rs  decompress.rs  delete.rs  mod.rs
core/src/partitions/: bios_boot.rs  fs.rs  mbr.rs  mod.rs  raw.rs
core/src/path_match/: mod.rs
core/src/path_match/fixtures/centos_pair2/: target_paths.json
core/src/path_match/fixtures/debian_pair2/: target_paths.json
core/src/storage/: local.rs  mod.rs
core/tests/: blob_patch.rs  chain_error.rs  compress_decompress.rs  compress_pipeline.rs  decompress.rs  fs_diff_integration.rs  open_image.rs  orchestrator.rs  qcow2_mount.rs  router_encoder.rs  stress_chain.rs  text_diff_encoder.rs
core/tests/common/: fake_storage.rs  mod.rs
examples/: imgdelta.toml
image-delta-cli/: Cargo.toml
image-delta-cli/migrations/: 0001_create_images.sql  0002_create_blob_origins.sql  0003_create_blob_index.sql
image-delta-cli/src/: config.rs  main.rs
image-delta-cli/src/commands/: compress.rs  decompress.rs  image.rs  manifest.rs  mod.rs
image-delta-cli/src/commands/debug/: mod.rs  walkdir_cmd.rs
image-delta-cli/src/impls/: local_storage.rs  mod.rs  s3_storage.rs
image-delta-core/: Cargo.toml  build.rs
image-delta-core/src/: algorithm.rs  compress_pipeline.rs  compressor.rs  decompress_pipeline.rs  encoder.rs  error.rs  format.rs  image.rs  lib.rs  manifest.rs  partition.rs  routing.rs  scheduler.rs  storage.rs
image-delta-core/src/encoders/: mod.rs
image-delta-core/src/encoders/passthrough/: mod.rs
image-delta-core/src/encoders/text_diff/: mod.rs
image-delta-core/src/encoders/vcdiff/: ffi.rs  mod.rs
image-delta-core/src/formats/: directory.rs  mod.rs  qcow2.rs
image-delta-core/src/fs_diff/: mod.rs
image-delta-core/src/path_match/: mod.rs
image-delta-core/src/path_match/fixtures/centos_pair1/: base_paths.json  target_paths.json
image-delta-core/src/path_match/fixtures/centos_pair2/: base_paths.json
image-delta-core/src/path_match/fixtures/debian_pair1/: base_paths.json  target_paths.json
image-delta-core/src/path_match/fixtures/debian_pair2/: base_paths.json
image-delta-core/src/path_match/fixtures/synthetic/: base_paths.json  target_paths.json
image-delta-core/tests/: blob_patch.rs  chain_error.rs  compress_decompress.rs  compress_pipeline.rs  decompress.rs  fs_diff_integration.rs  image_format_pack.rs  open_image.rs  orchestrator.rs  qcow2_mount.rs  router_encoder.rs  text_diff_encoder.rs
image-delta-core/tests/common/: fake_storage.rs  mod.rs
js/: mermaid-init-80534770.js
scripts/: add-license-headers.py  check-commit-msg.py  check-license-header.sh  roundtrip-test.sh
synthetic-fs/: Cargo.toml
synthetic-fs/src/: builder.rs  fstree.rs  lib.rs  mutator.rs
synthetic-fs/tests/: integration.rs
teststand/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  families.example.toml  teststand.example.toml
teststand/migrations/: 001_initial.sql  002_telegram.sql  003_target_bytes.sql  004_storage_bytes.sql  005_experiment_logs.sql  006_result_run_info.sql
teststand/src/: error.rs  lib.rs  logging.rs  main.rs
teststand/src/config/: experiment.rs  families.rs  mod.rs
teststand/src/db/: mod.rs
teststand/src/image_manager/: mod.rs
teststand/src/notify/: mod.rs
teststand/src/runner/: executor.rs  mod.rs  progress.rs  queue.rs
teststand/src/web/: api.rs  auth.rs  mod.rs
teststand/static/: index.html
teststand/tests/: config_test.rs  db_test.rs  log_buffer_test.rs
(+1169 files in other folders)
