# SPDX-License-Identifier: MIT OR Apache-2.0
# Copyright (c) 2026 JulesIMF
#
# image-delta — incremental disk-image compression toolkit
# Crate manifest for image-delta-cli (binary)

[package]
name = "image-delta-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CLI tool for per-file delta compression of cloud OS images"

[[bin]]
name = "imgdelta"
path = "src/main.rs"

[dependencies]
image-delta-core = { path = "../core", features = ["qcow2"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde_json = "1"
hex = "0.4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
tracing-indicatif = "0.3"

tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"

[dev-dependencies]
