# SPDX-License-Identifier: MIT OR Apache-2.0
# Copyright (c) 2026 JulesIMF
#
# image-delta — incremental disk-image compression toolkit
# Crate manifest for image-delta-core (library)

[package]
name = "image-delta-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Core library for per-file delta compression of cloud OS images"

[dependencies]
serde = { version = "1", features = ["derive"] }
num_enum = "0.7"
serde_bytes = "0.11"
rmp-serde = "1"
serde_json = "1"
hex = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
walkdir = "2"
sha2 = "0.10"
glob = "0.3"
tar = "0.4"
tracing = "0.1"
thiserror = "1"
tempfile = "3"
filetime = "0.2.27"
xattr = "1"
diffy = "0.3"
async-trait = "0.1"
rayon = "1"
flate2 = "1"
tokio = { version = "1", features = ["rt", "sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
sha2 = "0.10"
hex = "0.4"
filetime = "0.2"
tempfile = "3"
rand = "0.8"
indicatif = "0.17"
image-delta-synthetic-fs = { path = "../synthetic-fs" }

[build-dependencies]
cc = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["mount", "fs"], optional = true }

[features]
default = []
qcow2 = ["nix"] # Qcow2Image — requires Linux + qemu-nbd in PATH
